--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
