--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@react-google-maps/api": "^2.8.1",
+    "axios": "^0.26.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
