--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.6.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0"
