--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.6.0",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
